--- a/applist.json
+++ b/applist.json
@@ -1,6 +1,6 @@
 [
   {
-    "id": "LWD",                      // 앱 ID → APP/?id={id} 으로 이동됨
+    "id": "LWD",                      // 앱 ID → APP/?id= 으로 이동됨
     "name": "Let We Do",            // 앱 이름
     "image": "", // 썸네일 이미지 (Base64)
     "summary": "Ai를 활용한 새로운 공부법", // 간단 소개
